# MT-HDF5

./: BypassVOL-2022-12-02.docx  H5CX-2022-12-03.docx  H5E-2022-07-13.docx  H5E-2022-09-27.docx  H5FD-2022-12-01.docx  H5I-2022-08-15.docx  H5I-2022-09-18.docx  H5P-2022-10-16.docx  H5VL-2022-12-03.docx  README.md
LFHT/: README.md  lfht.c  lfht.h  lfht_tests.c
LFHT-macro/: README.md
LFHT-macro/design_docs/: LF_macros_RFC_250227.docx  README.md
LFHT-macro/src/: README.md  lfht.c  lfht.h  lfht.txt  lfht_tests.c
design_docs/: Bypass VOL-2026-01-14.docx  BypassVOL-2022-12-02.docx  BypassVOL-2025-01-18.docx  H5A_Updated_Writeup.docx  H5I-2022-09-18.docx  H5I-2024-07-30.docx  H5I-lockfree-solutions-2025-08-31.docx  H5I-v2-2024-01-23.docx  H5I_excerpt_240630.docx  H5P-2023-03-01.docx  H5P-2024-05-30.docx  H5P-2024-06-01.docx  H5P-2024-11-08.docx  H5P_census-6-12-2024.docx  H5VL-2022-12-03.docx  H5VL-2024-6-06.docx  README.md  RFC_recursive_xs_lock_250417.docx
design_docs/H5S/: HDF5_RFC.cls  HDF5_RFC.tex  Makefile  hdf5-c-lexer.py
design_docs/H5S/appendices/: appendix_h5s_data_structures.tex  appendix_h5s_fields_modified.tex  appendix_h5s_functions.tex  appendix_h5s_internal_funcs.tex
design_docs/H5S/sections/: abstract.tex  further_considerations.tex  h5s_concurrency.tex  h5s_concurrency_current_state.tex  h5s_interface.tex  intro.tex
design_docs/H5S/support/: glossary.tex  revisions.tex
design_docs/H5VL Threadsafe Design-1-10-25/: main.tex
design_docs/H5VL Threadsafe Design-1-10-25/sections/: A_structs.tex  B_H5PL.tex  C_TracingRefCount.tex  D_OptionalOperations.tex  E_LargeAtomicOperations.tex  F_LimitsOfGlobalMutex.tex  G_InternalFAPLCopying.tex  H_InternalVOLPropertyOps.tex
misc/Writing_HDF5_tests/: HDF5_RFC.tex
misc/Writing_HDF5_tests/appendices/: appendix_examples.tex  appendix_h5test.tex  appendix_testframe.tex  appendix_testpar.tex
misc/Writing_HDF5_tests/sections/: abstract.tex  considerations.tex  frameworks.tex  further_considerations.tex  intro.tex  multithread.tex  parallel.tex  serial.tex
misc/Writing_HDF5_tests/support/: revisions.tex  rfc.bib
vol_bypass/: 2025-05-Linux-VOL-connector-benchmarks.docx  CMakeLists.txt  COPYING  H5VLbypass.c  H5VLbypass.h  H5VLbypass_private.h  H5VLpassthru_ext.c  H5VLpassthru_ext.h  H5VLpassthru_ext_private.h  Makefile  README.md  README_Bypass_VOL.md  async_new_h5api_ex.c  new_h5api.c  new_h5api.h  new_h5api_ex.c  sample.h5
vol_bypass/test/: CMakeLists.txt  Makefile  common.c  common.h  h5_create.c  h5_read.c  h5_read.h  h5_write.c  posix_read.c  posix_read_mthread.c  posix_read_tpool.c  run_chunk_read.sh  run_chunk_simple.sh  run_chunk_write.sh  run_contiguous_read.sh  run_contiguous_simple.sh  run_contiguous_write.sh  run_multi_dsets.sh  run_multi_files.sh  run_multi_files_read.sh
